<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_restaurante"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/restaurant_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/image1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_nome_restaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant"
                    android:textColor="@color/black"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_address_restaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_horario_restaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>