<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_name_register"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:textColor="@color/primary"
                android:layout_height="wrap_content"
                android:inputType="text"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_email_register"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textColor="@color/primary"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_password_register"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textColor="@color/primary"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_password_confirm"
                android:layout_width="match_parent"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register_account"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/register"
                android:backgroundTint="@color/login_color"
                />

        </LinearLayout>


    </LinearLayout>



</ScrollView>